Implementaiton of asset actions and other fixes

--- a/RancWorldLayers.uplugin
+++ b/RancWorldLayers.uplugin
@@ -18,34 +18,17 @@
 		{
 			"Name": "RancWorldLayers",
 			"Type": "Runtime",
-			"LoadingPhase": "Default",
-			"WhitelistPlatforms": [
-				"Win64",
-				"Mac",
-				"Linux",
-				"IOS",
-				"Android"
-			]
+			"LoadingPhase": "Default"
 		},
 		{
 			"Name": "RancWorldLayersEditor",
 			"Type": "Editor",
-			"LoadingPhase": "Default",
-			"PlatformAllowList": [
-				"Win64",
-				"Mac",
-				"Linux"
-			]
+			"LoadingPhase": "Default"
 		},
 		{
 			"Name": "RancWorldLayersTest",
 			"Type": "Runtime",
-			"LoadingPhase": "Default",
-			"PlatformAllowList": [
-				"Win64",
-				"Mac",
-				"Linux"
-			]
+			"LoadingPhase": "Default"
 		}
 	]
 }
